--- a/no_as_loop.conf
+++ b/no_as_loop.conf
@@ -1,4 +1,4 @@
-function no_ass_loop_oneasn (int current_asn; bgppath temp_path; bool debug_print)
+function no_as_loop_oneasn (int current_asn; bgppath temp_path; bool debug_print)
 int temp_path_len;
 int temp_path_remain;
 int asn_count;
@@ -14,28 +14,12 @@ int asn_count;
         print "asn_count = ", asn_count;
         print "check " , current_asn , " is continue in path:", temp_path;
     }
-    case asn_count {
-        1: return true;
-        2: return temp_path ~ [= * current_asn current_asn =];
-        3: return temp_path ~ [= * current_asn current_asn current_asn =];
-        4: return temp_path ~ [= * current_asn current_asn current_asn current_asn =];
-        5: return temp_path ~ [= * current_asn current_asn current_asn current_asn current_asn =];
-        6: return temp_path ~ [= * current_asn current_asn current_asn current_asn current_asn current_asn =];
-        7: return temp_path ~ [= * current_asn current_asn current_asn current_asn current_asn current_asn current_asn =];
-        8: return temp_path ~ [= * current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn =];
-        9: return temp_path ~ [= * current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn =];
-        10: return temp_path ~ [= * current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn =];
-        11: return temp_path ~ [= * current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn =];
-        12: return temp_path ~ [= * current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn =];
-        13: return temp_path ~ [= * current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn =];
-        14: return temp_path ~ [= * current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn =];
-        15: return temp_path ~ [= * current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn =];
-        16: return temp_path ~ [= * current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn current_asn =];
-        else: return false; # Too many prepend
-    }
+	if asn_count = 1 return true;
+	if asn_count > 16 return false;	# Too Many ASN
+    return temp_path ~ [= * current_asn+ =];
 }
 
-function no_as_loop (bool debug_print)
+function no_as_loop (bool debug_print; bggpath temp_path)
 bgppath temp_path;
 int current_asn;
 {
@@ -44,122 +28,9 @@ int current_asn;
     if temp_path.len = 0 then {if debug_print then print "########## no more asn, pass"; return true;}
     current_asn = temp_path.last;
     if no_ass_loop_oneasn(current_asn, temp_path, debug_print) = false then {if debug_print then print "########## check result: false"; return false;} else { if debug_print then print "#### check result: true";}
+	temp_path = delete(temp_path, current_asn);
     # =========================
-    temp_path = delete(temp_path, current_asn);
-    if temp_path.len = 0 then {if debug_print then print "########## no more asn, pass"; return true;}
-    current_asn = temp_path.last;
-    if no_ass_loop_oneasn(current_asn, temp_path, debug_print) = false then {if debug_print then print "########## check result: false"; return false;} else { if debug_print then print "#### check result: true";}
-    # =========================
-    temp_path = delete(temp_path, current_asn);
-    if temp_path.len = 0 then {if debug_print then print "########## no more asn, pass"; return true;}
-    current_asn = temp_path.last;
-    if no_ass_loop_oneasn(current_asn, temp_path, debug_print) = false then {if debug_print then print "########## check result: false"; return false;} else { if debug_print then print "#### check result: true";}
-    # =========================
-    temp_path = delete(temp_path, current_asn);
-    if temp_path.len = 0 then {if debug_print then print "########## no more asn, pass"; return true;}
-    current_asn = temp_path.last;
-    if no_ass_loop_oneasn(current_asn, temp_path, debug_print) = false then {if debug_print then print "########## check result: false"; return false;} else { if debug_print then print "#### check result: true";}
-    # =========================
-    temp_path = delete(temp_path, current_asn);
-    if temp_path.len = 0 then {if debug_print then print "########## no more asn, pass"; return true;}
-    current_asn = temp_path.last;
-    if no_ass_loop_oneasn(current_asn, temp_path, debug_print) = false then {if debug_print then print "########## check result: false"; return false;} else { if debug_print then print "#### check result: true";}
-    # =========================
-    temp_path = delete(temp_path, current_asn);
-    if temp_path.len = 0 then {if debug_print then print "########## no more asn, pass"; return true;}
-    current_asn = temp_path.last;
-    if no_ass_loop_oneasn(current_asn, temp_path, debug_print) = false then {if debug_print then print "########## check result: false"; return false;} else { if debug_print then print "#### check result: true";}
-    # =========================
-    temp_path = delete(temp_path, current_asn);
-    if temp_path.len = 0 then {if debug_print then print "########## no more asn, pass"; return true;}
-    current_asn = temp_path.last;
-    if no_ass_loop_oneasn(current_asn, temp_path, debug_print) = false then {if debug_print then print "########## check result: false"; return false;} else { if debug_print then print "#### check result: true";}
-    # =========================
-    temp_path = delete(temp_path, current_asn);
-    if temp_path.len = 0 then {if debug_print then print "########## no more asn, pass"; return true;}
-    current_asn = temp_path.last;
-    if no_ass_loop_oneasn(current_asn, temp_path, debug_print) = false then {if debug_print then print "########## check result: false"; return false;} else { if debug_print then print "#### check result: true";}
-    # =========================
-    temp_path = delete(temp_path, current_asn);
-    if temp_path.len = 0 then {if debug_print then print "########## no more asn, pass"; return true;}
-    current_asn = temp_path.last;
-    if no_ass_loop_oneasn(current_asn, temp_path, debug_print) = false then {if debug_print then print "########## check result: false"; return false;} else { if debug_print then print "#### check result: true";}
-    # =========================
-    temp_path = delete(temp_path, current_asn);
-    if temp_path.len = 0 then {if debug_print then print "########## no more asn, pass"; return true;}
-    current_asn = temp_path.last;
-    if no_ass_loop_oneasn(current_asn, temp_path, debug_print) = false then {if debug_print then print "########## check result: false"; return false;} else { if debug_print then print "#### check result: true";}
-    # =========================
-    temp_path = delete(temp_path, current_asn);
-    if temp_path.len = 0 then {if debug_print then print "########## no more asn, pass"; return true;}
-    current_asn = temp_path.last;
-    if no_ass_loop_oneasn(current_asn, temp_path, debug_print) = false then {if debug_print then print "########## check result: false"; return false;} else { if debug_print then print "#### check result: true";}
-    # =========================
-    temp_path = delete(temp_path, current_asn);
-    if temp_path.len = 0 then {if debug_print then print "########## no more asn, pass"; return true;}
-    current_asn = temp_path.last;
-    if no_ass_loop_oneasn(current_asn, temp_path, debug_print) = false then {if debug_print then print "########## check result: false"; return false;} else { if debug_print then print "#### check result: true";}
-    # =========================
-    temp_path = delete(temp_path, current_asn);
-    if temp_path.len = 0 then {if debug_print then print "########## no more asn, pass"; return true;}
-    current_asn = temp_path.last;
-    if no_ass_loop_oneasn(current_asn, temp_path, debug_print) = false then {if debug_print then print "########## check result: false"; return false;} else { if debug_print then print "#### check result: true";}
-    # =========================
-    temp_path = delete(temp_path, current_asn);
-    if temp_path.len = 0 then {if debug_print then print "########## no more asn, pass"; return true;}
-    current_asn = temp_path.last;
-    if no_ass_loop_oneasn(current_asn, temp_path, debug_print) = false then {if debug_print then print "########## check result: false"; return false;} else { if debug_print then print "#### check result: true";}
-    # =========================
-    temp_path = delete(temp_path, current_asn);
-    if temp_path.len = 0 then {if debug_print then print "########## no more asn, pass"; return true;}
-    current_asn = temp_path.last;
-    if no_ass_loop_oneasn(current_asn, temp_path, debug_print) = false then {if debug_print then print "########## check result: false"; return false;} else { if debug_print then print "#### check result: true";}
-    # =========================
-    temp_path = delete(temp_path, current_asn);
-    if temp_path.len = 0 then {if debug_print then print "########## no more asn, pass"; return true;}
-    current_asn = temp_path.last;
-    if no_ass_loop_oneasn(current_asn, temp_path, debug_print) = false then {if debug_print then print "########## check result: false"; return false;} else { if debug_print then print "#### check result: true";}
-    # =========================
-    temp_path = delete(temp_path, current_asn);
-    if temp_path.len = 0 then {if debug_print then print "########## no more asn, pass"; return true;}
-    current_asn = temp_path.last;
-    if no_ass_loop_oneasn(current_asn, temp_path, debug_print) = false then {if debug_print then print "########## check result: false"; return false;} else { if debug_print then print "#### check result: true";}
-    # =========================
-    temp_path = delete(temp_path, current_asn);
-    if temp_path.len = 0 then {if debug_print then print "########## no more asn, pass"; return true;}
-    current_asn = temp_path.last;
-    if no_ass_loop_oneasn(current_asn, temp_path, debug_print) = false then {if debug_print then print "########## check result: false"; return false;} else { if debug_print then print "#### check result: true";}
-    # =========================
-    temp_path = delete(temp_path, current_asn);
-    if temp_path.len = 0 then {if debug_print then print "########## no more asn, pass"; return true;}
-    current_asn = temp_path.last;
-    if no_ass_loop_oneasn(current_asn, temp_path, debug_print) = false then {if debug_print then print "########## check result: false"; return false;} else { if debug_print then print "#### check result: true";}
-    # =========================
-    temp_path = delete(temp_path, current_asn);
-    if temp_path.len = 0 then {if debug_print then print "########## no more asn, pass"; return true;}
-    current_asn = temp_path.last;
-    if no_ass_loop_oneasn(current_asn, temp_path, debug_print) = false then {if debug_print then print "########## check result: false"; return false;} else { if debug_print then print "#### check result: true";}
-    # =========================
-    temp_path = delete(temp_path, current_asn);
-    if temp_path.len = 0 then {if debug_print then print "########## no more asn, pass"; return true;}
-    current_asn = temp_path.last;
-    if no_ass_loop_oneasn(current_asn, temp_path, debug_print) = false then {if debug_print then print "########## check result: false"; return false;} else { if debug_print then print "#### check result: true";}
-    # =========================
-    temp_path = delete(temp_path, current_asn);
-    if temp_path.len = 0 then {if debug_print then print "########## no more asn, pass"; return true;}
-    current_asn = temp_path.last;
-    if no_ass_loop_oneasn(current_asn, temp_path, debug_print) = false then {if debug_print then print "########## check result: false"; return false;} else { if debug_print then print "#### check result: true";}
-    # =========================
-    temp_path = delete(temp_path, current_asn);
-    if temp_path.len = 0 then {if debug_print then print "########## no more asn, pass"; return true;}
-    current_asn = temp_path.last;
-    if no_ass_loop_oneasn(current_asn, temp_path, debug_print) = false then {if debug_print then print "########## check result: false"; return false;} else { if debug_print then print "#### check result: true";}
-    # =========================
-    temp_path = delete(temp_path, current_asn);
-    if temp_path.len = 0 then {if debug_print then print "########## no more asn, pass"; return true;}
-    current_asn = temp_path.last;
-    if no_ass_loop_oneasn(current_asn, temp_path, debug_print) = false then {if debug_print then print "########## check result: false"; return false;} else { if debug_print then print "#### check result: true";}
-    
+    if temp_path.len < 20 then return no_as_loop(debug_print);
     if debug_print then print "########## too many asn";
     return false;
 }
