修复了点小问题（我递归参数忘加了，nm）

--- a/no_as_loop.conf
+++ b/no_as_loop.conf
@@ -14,23 +14,22 @@ int asn_count;
         print "asn_count = ", asn_count;
         print "check " , current_asn , " is continue in path:", temp_path;
     }
-	if asn_count = 1 return true;
-	if asn_count > 16 return false;	# Too Many ASN
-    return temp_path ~ [= * current_asn+ =];
+    if asn_count = 1 return true;	#优化掉switch
+    if asn_count > 16 return false;	# Too Many ASN
+    return temp_path ~ [= * current_asn+ =];	
 }
 
-function no_as_loop (bool debug_print; bggpath temp_path)
+function no_as_loop (bool debug_print; bggpath temp_path)	# 调用时直接在temp_path位置填入bgp_path，并尝试递归处理（我没试过BIRD能不能递归，悠着点）
 bgppath temp_path;
 int current_asn;
 {
     if debug_print then print "prefix: ", net;
-    temp_path = bgp_path;
     if temp_path.len = 0 then {if debug_print then print "########## no more asn, pass"; return true;}
     current_asn = temp_path.last;
     if no_ass_loop_oneasn(current_asn, temp_path, debug_print) = false then {if debug_print then print "########## check result: false"; return false;} else { if debug_print then print "#### check result: true";}
-	temp_path = delete(temp_path, current_asn);
+    temp_path = delete(temp_path, current_asn);
     # =========================
-    if temp_path.len < 20 then return no_as_loop(debug_print);
+    if temp_path.len < 20 then return no_as_loop(debug_print, temp_path);
     if debug_print then print "########## too many asn";
     return false;
 }
